k8s/base/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sre-decision-api-route
  namespace: sre-decision-intelligence
  labels:
    app.kubernetes.io/name: sre-decision-api
    app.kubernetes.io/component: route
    app.kubernetes.io/part-of: sre-decision-intelligence-platform
spec:
  parentRefs:
    - name: sre-decision-gateway
      namespace: sre-decision-intelligence

  hostnames:
    - sre-decision-api.platform.local

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /health
        - path:
            type: PathPrefix
            value: /health/db
        - path:
            type: PathPrefix
            value: /api/v1
        - path:
            type: PathPrefix
            value: /openapi.json
        - path:
            type: PathPrefix
            value: /docs
      backendRefs:
        - name: sre-decision-api
          port: 8000
